feat: add comment&post entity

--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,4 @@ build/
 .vscode/
 
 ### Custom Application ###
-!**/src/main/resources/application.properties
+src/main/resources/application.properties
