--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8088
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
 spring.datasource.username=private_boat
-spring.datasource.password=comment_overflow123
+spring.datasource.password=123456
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
