--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8088
-
+server.address=123.60.31.40
 spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
 spring.datasource.username=private_boat
 spring.datasource.password=123456
