--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ build/
 ### Custom Application ###
 src/main/resources/application.properties
 src/main/resources/banner.txt
+
+### MacOS Configuration ###
+*.DS_Store
