--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,15 @@
             <artifactId>tencentcloud-sdk-java</artifactId>
             <version>3.1.217</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
