--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.show-sql=false
 spring.servlet.multipart.max-file-size=300MB
+
+com.privateboat.forum.backend.image-base-url=http://192.168.0.101:8088/images/
