--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8088
 spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
-spring.datasource.username=xx01cyx
-spring.datasource.password=haveagoodday
+spring.datasource.username=private_boat
+spring.datasource.password=123456
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
