config: change package artifact id and version

--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.privateboat.forum</groupId>
-    <artifactId>backend</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>business-backend</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <name>BusinessBackend</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Business backend for CommentOverflow</description>
     <properties>
         <java.version>11</java.version>
     </properties>
