fix: fix profile fake data in unit test

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
             <artifactId>mockito-inline</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.baidu.aip</groupId>
+            <artifactId>java-sdk</artifactId>
+            <version>4.16.2</version>
+        </dependency>
     </dependencies>
 
     <build>
