--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,10 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=300MB
 
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.timeout=1000
+spring.redis.password=123456
+
 com.privateboat.forum.backend.image-base-url=http://192.168.0.101:8088/images/
 
