--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=300MB
 
 com.privateboat.forum.backend.image-base-url=http://123.60.31.40:8088/images/
+com.privateboat.forum.backend.compute-hot-list=true
+com.privateboat.forum.backend.compute-hot-list-rate=PT5M
