--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=300MB
 
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.timeout=1000
+
 com.privateboat.forum.backend.image-base-url=http://123.60.31.40:8088/images/
 com.privateboat.forum.backend.compute-hot-list=true
 com.privateboat.forum.backend.compute-hot-list-rate=PT5M
