--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.redis.timeout=1000
 com.privateboat.forum.backend.image-base-url=http://123.60.31.40:8088/images/
 com.privateboat.forum.backend.compute-hot-list=true
 com.privateboat.forum.backend.compute-hot-list-rate=PT5M
+com.privateboat.forum.backend.update-record-counter-rate=PT1D
