--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8088
 server.address=0.0.0.0
-spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
+spring.datasource.url=jdbc:postgresql://123.60.57.26:5432/comment_overflow
 spring.datasource.username=private_boat
 spring.datasource.password=123456
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -11,9 +11,9 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=300MB
 
-spring.redis.host=localhost
+spring.redis.host=123.60.57.26
 spring.redis.port=6379
-spring.redis.timeout=1000
+spring.redis.timeout=2000
 
 com.privateboat.forum.backend.image-base-url=http://123.60.31.40:8088/images/
 com.privateboat.forum.backend.compute-hot-list=true
