feat: add monitoring with micrometer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ com.privateboat.forum.backend.image-base-url=http://123.60.57.26:8080/images/
 com.privateboat.forum.backend.compute-hot-list=true
 com.privateboat.forum.backend.compute-hot-list-rate=PT5M
 com.privateboat.forum.backend.update-record-counter-rate=PT1D
+
+management.endpoints.web.exposure.include=prometheus
