fix: import the right dependencies for monitoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8088
 server.address=0.0.0.0
 spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
+#spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
 spring.datasource.username=private_boat
 spring.datasource.password=123456
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -11,6 +12,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.servlet.multipart.max-file-size=300MB
 
 spring.redis.host=192.168.0.100
+#spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.timeout=2000
 
@@ -26,4 +28,4 @@ com.privateboat.forum.backend.compute-hot-list=true
 com.privateboat.forum.backend.compute-hot-list-rate=PT5M
 com.privateboat.forum.backend.update-record-counter-rate=PT1D
 
-management.endpoints.web.exposure.include=prometheus
+management.endpoints.web.exposure.include=*
