--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.servlet.multipart.max-file-size=300MB
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.timeout=1000
+spring.cache.type=redis
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
