--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8088
 server.address=0.0.0.0
-# spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
-spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
+spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
+# spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
 spring.datasource.username=private_boat
 spring.datasource.password=123456
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -11,8 +11,8 @@ spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.servlet.multipart.max-file-size=300MB
 
-# spring.redis.host=192.168.0.100
-spring.redis.host=localhost
+spring.redis.host=192.168.0.100
+# spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.timeout=2000
 
