fix: increase maximum SQL pool size to 50

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8088
 server.address=0.0.0.0
+
+# PostgreSQL configuration
 spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
 # spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
 spring.datasource.username=private_boat
@@ -9,7 +11,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.servlet.multipart.max-file-size=300MB
+
+# Maximum of 9 pictures, each smaller than 20MB
+spring.servlet.multipart.max-file-size=180MB
+
+# Increase maximum connection to handle 2000 QPS
+spring.datasource.hikari.maximumPoolSize=50
 
 spring.redis.host=192.168.0.100
 # spring.redis.host=localhost
@@ -34,3 +41,4 @@ management.endpoints.web.exposure.include=*
 # Logging configurations
 # logging.file.path=/Users/david/Study/SJTU/Courses/SE128/backend_logs
 logging.file.path=/var/log/business-backend
+
