--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,16 @@
             <artifactId>java-sdk</artifactId>
             <version>4.16.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.mahout</groupId>
+            <artifactId>mahout-core</artifactId>
+            <version>0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.mahout</groupId>
+            <artifactId>mahout-integration</artifactId>
+            <version>0.13.0</version>
+        </dependency>
     </dependencies>
 
     <build>
