optimization: add index for approval record and star record

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.address=0.0.0.0
 # PostgreSQL configuration
 spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
 # spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
+# spring.datasource.url=jdbc:postgresql://123.60.57.26:5432/comment_overflow
 spring.datasource.username=private_boat
 spring.datasource.password=123456
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -17,6 +18,7 @@ spring.servlet.multipart.max-file-size=180MB
 
 spring.redis.host=192.168.0.100
 # spring.redis.host=localhost
+# spring.redis.host=123.60.57.26
 spring.redis.port=6379
 spring.redis.timeout=2000
 spring.cache.type=redis
@@ -36,6 +38,5 @@ com.privateboat.forum.backend.update-record-counter-rate=PT1D
 management.endpoints.web.exposure.include=*
 
 # Logging configurations
-# logging.file.path=/Users/david/Study/SJTU/Courses/SE128/backend_logs
 logging.file.path=/var/log/business-backend
 
