debug: add profile code for searching comment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+# Only enabled for debugging
+# spring.jpa.show-sql=true
+
 # Maximum of 9 pictures, each smaller than 20MB
 spring.servlet.multipart.max-file-size=180MB
 
