--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.datasource.hikari.maximum-pool-size=500
 
 # Only enabled for debugging
 # spring.jpa.show-sql=true
@@ -39,7 +40,6 @@ com.privateboat.forum.backend.compute-hot-list-rate=PT5M
 com.privateboat.forum.backend.update-record-counter-rate=PT1D
 
 management.endpoints.web.exposure.include=*
-
 # Logging configurations
 logging.file.path=/var/log/business-backend
 
