--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8088
 server.address=0.0.0.0
 
 # PostgreSQL configuration
-# spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
+spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
 # spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
-spring.datasource.url=jdbc:postgresql://123.60.57.26:5432/comment_overflow
+# spring.datasource.url=jdbc:postgresql://123.60.57.26:5432/comment_overflow
 spring.datasource.username=private_boat
 spring.datasource.password=123456
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -20,9 +20,9 @@ spring.datasource.hikari.maximum-pool-size=500
 # Maximum of 9 pictures, each smaller than 20MB
 spring.servlet.multipart.max-file-size=180MB
 
-# spring.redis.host=192.168.0.100
+spring.redis.host=192.168.0.100
 # spring.redis.host=localhost
-spring.redis.host=123.60.57.26
+# spring.redis.host=123.60.57.26
 spring.redis.port=6379
 spring.redis.timeout=2000
 spring.cache.type=redis
@@ -40,6 +40,7 @@ com.privateboat.forum.backend.compute-hot-list-rate=PT5M
 com.privateboat.forum.backend.update-record-counter-rate=PT1D
 
 management.endpoints.web.exposure.include=*
+
 # Logging configurations
-# logging.file.path=/var/log/business-backend
+logging.file.path=/var/log/business-backend
 
