feat: add log for tomcat

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8088
 server.address=0.0.0.0
+server.tomcat.accesslog.check-exists=true
 
 # PostgreSQL configuration
 spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
@@ -43,4 +44,7 @@ management.endpoints.web.exposure.include=*
 
 # Logging configurations
 logging.file.path=/var/log/business-backend
+server.tomcat.accesslog.directory=/var/log/business-backend
+server.tomcat.accesslog.enabled=true
+server.tomcat.threads.max=300
 
