tweak: change tomcat access log pattern

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,4 +47,5 @@ logging.file.path=/var/log/business-backend
 server.tomcat.accesslog.directory=/var/log/business-backend
 server.tomcat.accesslog.enabled=true
 server.tomcat.threads.max=300
+server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
 
