BREAKING CHANGE: downgrade jdk to 8

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <name>BusinessBackend</name>
     <description>Business backend for CommentOverflow</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>8</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -157,6 +157,11 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
             <version>1.7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.interceptor</groupId>
+            <artifactId>javax.interceptor-api</artifactId>
+            <version>1.2.2</version>
         </dependency>
     </dependencies>
 
