merge: merge CF into recommendation

--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,12 @@
         <dependency>
             <groupId>org.apache.mahout</groupId>
             <artifactId>mahout-integration</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>jdk.tools</groupId>
+                    <artifactId>jdk.tools</artifactId>
+                </exclusion>
+            </exclusions>
             <version>0.13.0</version>
         </dependency>
         <dependency>
