optimize: change tomcat connnection timeout to 2s

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8088
 server.address=0.0.0.0
 server.tomcat.accesslog.check-exists=true
-
+server.tomcat.connection-timeout=2s
 # PostgreSQL configuration
 spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
 # spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.datasource.hikari.maximum-pool-size=700
+spring.datasource.hikari.maximum-pool-size=500
 
 # Only enabled for debugging
 # spring.jpa.show-sql=true
