optimize: increase server.tomcat.threads.min-spare from 10 to 100

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8088
 server.address=0.0.0.0
 server.tomcat.accesslog.check-exists=true
-
+server.tomcat.threads.min-spare=100
 # PostgreSQL configuration
 spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
 # spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
