--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.datasource.hikari.maximum-pool-size=500
-
+spring.datasource.hikari.leak-detection-threshold=10000
 # Only enabled for debugging
 # spring.jpa.show-sql=true
 
