--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,11 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.datasource.hikari.maximum-pool-size=1000
+spring.datasource.hikari.minimum-idle=50
 spring.datasource.hikari.leak-detection-threshold=10000
-spring.datasource.hikari.max-lifetime=30000
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.max-lifetime=10000
+spring.datasource.hikari.idle-timeout=10000
 # Only enabled for debugging
 # spring.jpa.show-sql=true
 
@@ -45,6 +48,7 @@ management.endpoints.web.exposure.include=*
 
 # Logging configurations
 logging.file.path=/var/log/business-backend
+logging.level.com.zaxxer.hikari=DEBUG
 server.tomcat.accesslog.directory=/var/log/business-backend
 server.tomcat.accesslog.enabled=true
 server.tomcat.threads.max=300
