fix: fix controller unit test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.address=0.0.0.0
 server.tomcat.accesslog.check-exists=true
 server.tomcat.threads.min-spare=200
 # PostgreSQL configuration
-spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
+# spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
 # spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
-# spring.datasource.url=jdbc:postgresql://123.60.57.26:5432/comment_overflow
+spring.datasource.url=jdbc:postgresql://123.60.57.26:5432/comment_overflow
 spring.datasource.username=private_boat
 spring.datasource.password=123456
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -22,9 +22,9 @@ spring.datasource.hikari.leak-detection-threshold=10000
 # Maximum of 9 pictures, each smaller than 20MB
 spring.servlet.multipart.max-file-size=300MB
 
-spring.redis.host=192.168.0.100
+# spring.redis.host=192.168.0.100
 # spring.redis.host=localhost
-# spring.redis.host=123.60.57.26
+spring.redis.host=123.60.57.26
 spring.redis.port=6379
 spring.redis.timeout=2000
 spring.cache.type=redis
@@ -44,10 +44,10 @@ com.privateboat.forum.backend.update-record-counter-rate=PT1D
 management.endpoints.web.exposure.include=*
 
 # Logging configurations
-logging.file.path=/var/log/business-backend
-logging.level.com.zaxxer.hikari=DEBUG
-server.tomcat.accesslog.directory=/var/log/business-backend
-server.tomcat.accesslog.enabled=true
-server.tomcat.threads.max=300
-server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
+#logging.file.path=/var/log/business-backend
+#logging.level.com.zaxxer.hikari=DEBUG
+#server.tomcat.accesslog.directory=/var/log/business-backend
+#server.tomcat.accesslog.enabled=true
+#server.tomcat.threads.max=300
+#server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
 
