--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@ server.tomcat.accesslog.check-exists=true
 server.tomcat.accept-count=200
 server.tomcat.threads.min-spare=200
 # PostgreSQL configuration
-# spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
-# spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
-spring.datasource.url=jdbc:postgresql://123.60.57.26:5432/comment_overflow
-spring.datasource.username=private_boat
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/comment_overflow
+ spring.datasource.url=jdbc:postgresql://localhost:5432/comment_overflow
+# spring.datasource.url=jdbc:postgresql://123.60.57.26:5432/comment_overflow
+spring.datasource.username=xx01cyx
+spring.datasource.password=haveagoodday
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
@@ -23,9 +23,9 @@ spring.datasource.hikari.leak-detection-threshold=10000
 # Maximum of 9 pictures, each smaller than 20MB
 spring.servlet.multipart.max-file-size=300MB
 
-# spring.redis.host=192.168.0.100
-# spring.redis.host=localhost
-spring.redis.host=123.60.57.26
+#spring.redis.host=192.168.0.100
+spring.redis.host=localhost
+# spring.redis.host=123.60.57.26
 spring.redis.port=6379
 spring.redis.timeout=2000
 spring.cache.type=redis
